fix: alignment issue

--- a/src/app/components/HeaderSection/HeaderSection.module.css
+++ b/src/app/components/HeaderSection/HeaderSection.module.css
@@ -43,7 +43,7 @@
 	text-align: left;
 }
 
-.headerSection h2 {
+.headerSectionCenter h2 {
 	text-align: center;
 }
 
